--- a/presentation/src/main/res/layout/activity_game.xml
+++ b/presentation/src/main/res/layout/activity_game.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".main.MainActivity">
+    tools:context=".gamification.GamificationActivity">
 
     <include layout="@layout/toolbar" />
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_game" />
 
 </android.support.design.widget.CoordinatorLayout>
