--- a/presentation/src/main/res/layout/content_maps.xml
+++ b/presentation/src/main/res/layout/content_maps.xml
@@ -4,7 +4,8 @@
     android:id="@+id/nestedScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
