--- a/presentation/src/main/res/layout/content_game.xml
+++ b/presentation/src/main/res/layout/content_game.xml
@@ -30,6 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView6"
             android:layout_alignStart="@+id/achiev_1"
+            android:visibility="invisible"
             app:srcCompat="@android:drawable/star_big_on"
             tools:layout_editor_absoluteX="324dp"
             tools:layout_editor_absoluteY="395dp" />
@@ -102,6 +103,7 @@
             android:layout_alignStart="@+id/achiev_3"
             android:layout_below="@+id/imageView3"
             android:layout_marginTop="14dp"
+            android:visibility="invisible"
             app:srcCompat="@android:drawable/star_big_on"
             tools:layout_editor_absoluteX="324dp"
             tools:layout_editor_absoluteY="297dp" />
@@ -136,6 +138,7 @@
             android:layout_alignEnd="@+id/imageView"
             android:layout_below="@+id/imageView"
             android:layout_marginTop="21dp"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/achiev_2"
             app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@android:drawable/star_big_on" />
